# ocaml-effstudies

./: dune-project  effstudies.opam
lib/: dune  effTypes.ml  inputAndOutput.ml  nondet.ml  partial.ml  scratch.ml  state.ml  state.org
test/: dune  input-and-output.t  ioeff.ml  nondet.t  nondeteff.ml
